--- a/devops/local_conf/nginx.conf
+++ b/devops/local_conf/nginx.conf
@@ -21,17 +21,22 @@ http {
         client_max_body_size 1g;
 
         location / {
-            add_header 'Access-Control-Allow-Origin' '*' always;
 
             # Preflighted requests
             if ($request_method = OPTIONS ) {
-                add_header 'Access-Control-Allow-Origin' '*' always;
+                add_header 'Access-Control-Allow-Origin' 'http://localhost:4200';
+                add_header 'Access-Control-Allow-Credentials' 'true';
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, HEAD, PUT, DELETE' always;
-                add_header 'Access-Control-Allow-Headers' '*' always;
+                add_header 'Access-Control-Allow-Headers' 'x-csrftoken,x-guest-uuid,content-type,x-geoapi-application,x-geoapi-ispublicview,x-tapis-token' always;
                 add_header 'Access-Control-Max-Age' 86400 always;
                 add_header 'Content-Length' 0 always;
                 return 204;
             }
+
+            add_header 'Access-Control-Allow-Origin' 'http://localhost:4200';
+            add_header 'Access-Control-Allow-Credentials' 'true';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, HEAD, PUT, DELETE' always;
+            add_header 'Access-Control-Allow-Headers' 'x-csrftoken,x-guest-uuid,content-type,x-geoapi-application,x-geoapi-ispublicview,x-tapis-token' always;
 
             rewrite ^/api(.*) /$1 break;
             proxy_pass http://geoapi_backend:8000/;
