task/WG-280, task/WG-278: Litestar conversion; Backend sessions and websocket events (#248)
* litestar conversion: initial commit

* fix cors; fix csrf; fix auth; fix jwt handler; fix pydantic data handling

* working project creation and detail

* Keep poetry up to date

* get tests working

* tests wip

* fix db initialization

* enable custom jwt and session auth to allow for anonymous users

* fix notifications tests

* add missing controller

* fix overlay tests

* fix point cloud route tests

* fix projects tests

* fix remaining projects tests

* fix streetview tests

* fix task tests

* fix tile server tests; ensure puts do not include none values

* remove unused import; fix github actions

* fix woker test

* update poetry; litestar

* revert auth redirect uri to render tapis token in hash instead of params

* add channels plugin

* create user for celery to interact with volumes

* add websockets and channels; communicate celery task updates to webhook

* fix tests

* fix typo; formatting

* use redis as celery backend; communicate new tapis token via websocket

* add user info route; logout via tapis

* add refresh token mechanism to get_user_info route

* fix test

* fix tests

* simplify auth response; update jwt websocket update method; typo

* remove references to flask

* fix point cloud upload

* fix geoapi_backend reference

* add note describing use of GeoAPIToken subclass

* fix nginx always flags; handle unauthenticated and permission denied errors separately; handle token refresh error on auth check

* fix tests

* add metrics logger

* add path for celerybeat

* update celeryuser id; update nginx conf for websocket proxying

* refactor webhook path to not contain "api"; fix webhook util for deployed envs

* increase db pool size

* add branch tag to makefile

* publish branch tag on deploy

* adjust sqlalchemy config

* revert db change that broke websockets

* fix test

* use user 1100:1100 for running geoapi, same as celery

* enable engine

--- a/devops/Dockerfile
+++ b/devops/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.11-slim AS python-base
+FROM python:3.12-slim AS python-base
 
 LABEL maintainer="DesignSafe-CI <designsafe-ci@tacc.utexas.edu>"
 
@@ -6,7 +6,6 @@ ARG DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update && apt-get install -y \
     build-essential \
-    software-properties-common \
     libgdal-dev \
     ffmpeg \
     curl \
@@ -14,34 +13,46 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # https://python-poetry.org/docs/configuration/#using-environment-variables
-ENV POETRY_VERSION=1.8 \
+ENV POETRY_VERSION=2.1.4 \
     POETRY_HOME="/opt/poetry" \
     POETRY_VIRTUALENVS_IN_PROJECT=true \
     PYSETUP_PATH="/opt/pysetup" \
     VENV_PATH="/opt/pysetup/.venv"
 
+# prepend venv and poetry to path
 ENV PATH="$VENV_PATH/bin:$POETRY_HOME/bin:$PATH"
 
 # Install poetry version $POETRY_VERSION to $POETRY_HOME
 RUN pip3 install --no-cache-dir --upgrade pip setuptools wheel \
     && python3 -m venv "$POETRY_HOME" \
-    && "$POETRY_HOME/bin/pip" install --no-cache-dir poetry=="$POETRY_VERSION"
+    && "$POETRY_HOME/bin/pip" install --no-cache-dir poetry~="$POETRY_VERSION"
 
 # Copy project requirement files to ensure they will be cached.
 WORKDIR $PYSETUP_PATH
-
 COPY devops/poetry.lock devops/pyproject.toml ./
+
+# install runtime deps - uses $POETRY_VIRTUALENVS_IN_PROJECT internally
+RUN poetry install
+
+RUN groupadd -g 1100 celeryuser
+RUN useradd -s /sbin/nologin -u 1100 -g 1100 celeryuser
 
 ##############
 # `development` image target is used for local development
 FROM python-base AS development
 
+# copy in our built poetry + venv
+COPY --from=python-base $POETRY_HOME $POETRY_HOME
+COPY --from=python-base $PYSETUP_PATH $PYSETUP_PATH
+
 # Install dev dependencies
-RUN "$POETRY_HOME/bin/poetry" install --with dev,flask,worker
+RUN poetry install --with dev
 
 COPY geoapi /app/geoapi
 
 ENV PYTHONPATH=/app
+
+USER 1100:1100
 
 WORKDIR /app/geoapi
 
@@ -50,10 +61,12 @@ WORKDIR /app/geoapi
 FROM python-base AS production
 
 # Install runtime dependencies
-RUN "$POETRY_HOME/bin/poetry" install --with flask,worker
+COPY --from=python-base $PYSETUP_PATH $PYSETUP_PATH
 
 COPY geoapi /app/geoapi
 
 ENV PYTHONPATH=/app
+
+USER 1100:1100
 
 WORKDIR /app/geoapi
