--- a/devops/local_conf/nginx.conf
+++ b/devops/local_conf/nginx.conf
@@ -1,7 +1,7 @@
 events {
-  worker_connections 1024; # increase if you have lots of clients
-  accept_mutex off; # set to 'on' if nginx worker_processes > 1
-  use epoll;
+    worker_connections 1024; # increase if you have lots of clients
+    accept_mutex off; # set to 'on' if nginx worker_processes > 1
+    use epoll;
 }
 http {
 
@@ -12,8 +12,8 @@ http {
 
     # Map URI → project ID when using assets route (for auth checking)
     map $request_uri $project_id {
-        ~^/assets/(\d+)/  $1;
-        default           "";
+        ~^/assets/(\d+)/ $1;
+        default "";
     }
 
     server {
@@ -21,26 +21,35 @@ http {
         client_max_body_size 1g;
 
         location / {
-            add_header 'Access-Control-Allow-Origin' '*' always;
 
             # Preflighted requests
             if ($request_method = OPTIONS ) {
-                add_header 'Access-Control-Allow-Origin' '*' always;
+                add_header 'Access-Control-Allow-Origin' 'http://localhost:4200' always;
+                add_header 'Access-Control-Allow-Credentials' 'true' always;
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, HEAD, PUT, DELETE' always;
-                add_header 'Access-Control-Allow-Headers' '*' always;
+                add_header 'Access-Control-Allow-Headers' 'x-csrftoken,x-guest-uuid,content-type,x-geoapi-application,x-geoapi-ispublicview,x-tapis-token' always;
                 add_header 'Access-Control-Max-Age' 86400 always;
                 add_header 'Content-Length' 0 always;
                 return 204;
             }
 
+            add_header 'Access-Control-Allow-Origin' 'http://localhost:4200' always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, HEAD, PUT, DELETE' always;
+            add_header 'Access-Control-Allow-Headers' 'x-csrftoken,x-guest-uuid,content-type,x-geoapi-application,x-geoapi-ispublicview,x-tapis-token' always;
+
             rewrite ^/api(.*) /$1 break;
-            proxy_pass http://geoapi:8000;
+            proxy_pass http://geoapi_backend:8000/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
+            proxy_set_header Connection "upgrade";
+
+            proxy_redirect off;
+
             proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $server_name;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
@@ -77,7 +86,7 @@ http {
             add_header Access-Control-Allow-Origin *;
             add_header Access-Control-Allow-Headers *;
 
-            proxy_pass http://geoapi:8000/projects/$project_id/check-access/;
+            proxy_pass http://geoapi_backend:8000/projects/$project_id/check-access/;
 
             proxy_pass_request_body off;
             proxy_set_header Content-Length "";
