--- a/devops/pyproject.toml
+++ b/devops/pyproject.toml
@@ -1,58 +1,50 @@
-[tool.poetry]
+[project]
 name = "geoapi"
-version = "2.5"
-description = ""
-authors = ["DesignSafe-CI <designsafe-ci@tacc.utexas.edu>"]
+version = "3.0.0"
+description = "GeoAPI Backend for Hazmapper"
+authors = [
+  { name = "DesignSafe-CI", email = "designsafe-ci@tacc.utexas.edu" },
+]
+readme = "README.md"
+requires-python = "^3.12"
+dynamic = [ "dependencies" ]
+
+[tool.poetry]
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.11"
 alembic = "^1"
-celery = "^5.4.0"
+celery = "^5.5.2"
+ExifRead = "^2.3.2"
 ffmpeg-python = "^0.2.0"
+Fiona = "1.10.1"
 GeoAlchemy2 = "^0.16.0"
 geojson = "^3.1.0"
-psycopg2-binary = "^2.9.10"
-sqlalchemy = "^2.0.36"
-sqlalchemy-utils = "^0.41.2"
-ipython = "^8.29.0"
-
-[tool.poetry.group.flask]
-optional = true
-
-[tool.poetry.group.flask.dependencies]
-cryptography = "^43.0.3"
-flask = "^3.1.0"
-flask-restx = "^1.3.0"
-gevent = "^24.11.1"
-gunicorn = "^23.0.0"
-PyJWT = "^2.9.0"
-requests = "^2.32.3"
-urllib3 = "^2.2.3"
-
-[tool.poetry.group.worker]
-optional = true
-
-[tool.poetry.group.worker.dependencies]
-ExifRead = "^2.3.2"
-Fiona = "1.10.1"
 geopandas = "^1.0.1"
+ipython = "^9.2.0"
 laspy = {extras = ["lazrs"], version = "^2.5.4"}
+litestar = {extras = ["cryptography", "jwt", "pydantic", "redis", "sqlalchemy", "standard"], version = "^2.17.0"}
 mapillary-tools = "^0.11.2"
+psycopg2-binary = "^2.9.10"
 pillow = "^11.0.0"
+PyJWT = "^2.9.0"
 pyogrio = "^0.10.0"
 pyproj = "^3.7.0"
 shapely = "^2.0.6"
+sqlalchemy = "^2.0.41"
+sqlalchemy-utils = "^0.41.2"
+tapipy = "^1.8.2"
+geojson-pydantic = "^2.0.0"
 
 [tool.poetry.group.dev]
 optional = true
 
 [tool.poetry.group.dev.dependencies]
-black = "^24.10.0"
-flake8 = "^7.1.1"
-pytest = "^8.3.3"
-pytest-cov = "^6.0.0"
-pytest-mock = "^3.14.0"
+black = "^25.1.0"
+flake8 = "^7.2.0"
+pytest = "^8.3.5"
+pytest-cov = "^6.1.1"
+pytest-mock = "^3.14.1"
 requests-mock = "^1.12.1"
 
 [build-system]
